<resources>
    <string name="app_name">SmsToys</string>
    <string name="process">Process</string>
    <string name="fetcher">Fetcher: %s</string>
    <string name="fetcher_idle">Fetcher: Idle</string>
    <string name="fetching">Fetching Mail nr: %d</string>
    <string name="ssl">SSL</string>
    <string name="host">Host</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="protocol">Protocol</string>
    <string name="user">User</string>
    <string name="subject">Subject</string>
    <string name="save">Save</string>
    <string name="email_configuration">Email Configuration</string>
    <string name="override_date_and_time">Override Date and Time</string>
</resources>
