<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_email_config"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smstoys.EmailConfig">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edHost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtUser"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/user"
        tools:text="txtUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/txtUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edUser"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="edUser" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="txtPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="edPassword"
        android:inputType="textVisiblePassword" />

    <TextView
        android:text="@string/port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtPort"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="txtPort" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/txtPort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edPort"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="edPort" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/txtProtocol"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edProtocol"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="edProtocol"
        android:inputType="text" />

    <CheckBox
        android:text="@string/ssl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edProtocol"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/cbSSL"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="cbSSL" />

    <TextView
        android:text="@string/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbSSL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtSubject"
        tools:text="txtSubject"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/txtSubject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edSubject"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="edSubject" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edHost"
        tools:text="edHost"
        android:inputType="text"
        android:layout_below="@+id/txtHost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtProtocol"
        tools:text="txtProtocol"
        android:layout_below="@+id/edPort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtHost"
        tools:text="txtHost"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        tools:text="btnSave"
        android:onClick="btnSave_Click"
        android:layout_below="@+id/edSubject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>

</ScrollView>