<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sms_toys"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smstoys.SmsToys">

    <Button
        android:text="@string/process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnProcess"
        android:onClick="btnProcess_Click"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="btnProcess" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prgProcess"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnProcess"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:text="@string/fetcher_idle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/prgProcess"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvFetcherStatus"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="tvFetcherStatus" />

    <Button
        android:text="@string/email_configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnEmailConfig"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="btnEmailConfig"
        android:onClick="btnEmailConfig_Click" />

    <Button
        android:text="@string/override_date_and_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEmailConfig"
        android:id="@+id/btnSetTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="btnSetTime"
        android:onClick="btnSetTime_Click"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSetTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtLastTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="txtLastTime" />

</RelativeLayout>
